# xmrigger-widget

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.jsx  ConfigApp.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FuelGauge.jsx
